# Courses

./: .gitignore  Asm_8051_Lib.LST  Base_TP3.C  Base_TP3.LST  CMakeLists.txt  CONTRIBUTORS.md  INSTALL.md  Lib_Base.LST  Lib_Base.c  Main_TP4.C  Main_TP4.LST  Makefile  Mini_Projet_3IRC.uvproj  Projet_TP3.uvgui.jonag  Projet_TP3.uvopt  Projet_TP3.uvproj  README.md  STARTUP.LST  TP3_IRC.M51  TP3_IRC.ORC  TP3_IRC.build_log.htm  TP3_IRC.lnp  TP4_IRC_Sim.build_log.htm  apply.mlx  bezier.asv  bezier4.mlx  clean.sh  commit.sh  dicho_script.mlx  ex5.mlx  ex6.mlx  interpolation1.mlx  interpolation2.mlx  letter.mlx  letterItalic.mlx  matlab.mat  readme.md  simpson.mlx  today.m  transfopoint.mlx  (+3 more)
old/: Base_TP3.C  Base_TP3_jojo.C
src/client/: bmp.c  bmp.h  client.c  client.h  couleur.c  couleur.h
src/common/: const.c  const.h  enum.c  enum.h  json.c  json.h  tools.c  tools.h  types.c  types.h
src/server/: server.c  server.h
src/test/: const.h  enum.c  json.c  json.h  test.c  test.h  tools.c  tools.h  types.c  types.h
test/: const.h  enum.c  enum.h  json.c  json.h  test.c  tools.c  tools.h  types.c  types.h
watch/: dev.sh  test.bash  test.sh
